Add Broadage API support as alternative to API-Football with flexible response parsing

--- a/env.example
+++ b/env.example
@@ -1,5 +1,15 @@
 # API Configuration
-API_FOOTBALL_KEY=your_api_football_key_here
+# Option 1: Use Broadage API (recommended - supports current season)
+USE_BROADAGE_API=true
+BROADAGE_API_KEY=your_broadage_api_key_here
+BROADAGE_API_URL=https://api.broadage.com/v1
+
+# Option 2: Use API-Football (free plan only supports seasons 2021-2023)
+# USE_BROADAGE_API=false
+# API_FOOTBALL_KEY=your_api_football_key_here
+
+# OddsAPI Configuration (for real bookmaker odds)
+ODDS_API_KEY=your_odds_api_key_here
 
 # Database Configuration
 # Option 1: Separate database on same PostgreSQL server (RECOMMENDED)
