Update Broadage API: Use correct headers (Ocp-Apim-Subscription-Key, languageId) and try multiple endpoint patterns

--- a/env.example
+++ b/env.example
@@ -2,7 +2,8 @@
 # Option 1: Use Broadage API (recommended - supports current season)
 USE_BROADAGE_API=true
 BROADAGE_API_KEY=your_broadage_api_key_here
-BROADAGE_API_URL=https://api.broadage.com/v1
+BROADAGE_API_URL=https://api.broadage.com
+BROADAGE_LANGUAGE_ID=1  # 1=English, check Broadage docs for other languages
 
 # Option 2: Use API-Football (free plan only supports seasons 2021-2023)
 # USE_BROADAGE_API=false
