Optimize: Set default languageId to 2 (working value), try fallbacks only if needed

--- a/env.example
+++ b/env.example
@@ -3,7 +3,7 @@
 USE_BROADAGE_API=true
 BROADAGE_API_KEY=your_broadage_api_key_here
 BROADAGE_API_URL=https://s0-sports-data-api.broadage.com
-BROADAGE_LANGUAGE_ID=1  # 1=English, check Broadage docs for other languages
+BROADAGE_LANGUAGE_ID=2  # 2=works for trial subscription (1 and 0 are invalid)
 
 # Option 2: Use API-Football (free plan only supports seasons 2021-2023)
 # USE_BROADAGE_API=false
